--- a/examples/step1_simpleVQA/container.yaml
+++ b/examples/step1_simpleVQA/container.yaml
@@ -1,7 +1,7 @@
 conductor_config:
   name: Configuration
   base_url:
-    value: http://12345:8080
+    value: http://localhost:8080
     description: The Conductor Server API endpoint
     env_var: CONDUCTOR_SERVER_URL
   auth_key:
@@ -56,18 +56,16 @@ connectors:
       value: 0
       env_var: DB
 components:
-  RedisSTM:
-    name: RedisSTM
   DefaultCallback:
     name: DefaultCallback
     bot_id:
       value: ''
       env_var: BOT_ID
     start_time:
-      value: 2024-11-10_16:28:07
+      value: 2024-11-11_15:02:26
       env_var: START_TIME
     folder_name:
-      value: ./running_logs/2024-11-10_16:28:07
+      value: ./running_logs/2024-11-11_15:02:26
       env_var: FOLDER_NAME
   AppInput:
     name: AppInput
@@ -77,8 +75,10 @@ components:
       value: ''
       env_var: BOT_ID
     start_time:
-      value: 2024-11-10_16:28:07
+      value: 2024-11-11_15:02:26
       env_var: START_TIME
     folder_name:
-      value: ./running_logs/2024-11-10_16:28:07
+      value: ./running_logs/2024-11-11_15:02:26
       env_var: FOLDER_NAME
+  RedisSTM:
+    name: RedisSTM
