--- a/examples/step3_outfit_with_loop/container.yaml
+++ b/examples/step3_outfit_with_loop/container.yaml
@@ -1,7 +1,7 @@
 conductor_config:
   name: Configuration
   base_url:
-    value: http://12345:8080
+    value: http://10.8.28.230:8080
     description: The Conductor Server API endpoint
     env_var: CONDUCTOR_SERVER_URL
   auth_key:
@@ -24,19 +24,19 @@ connectors:
   redis_stream_client:
     name: RedisConnector
     host:
-      value: localhost
+      value: 10.8.17.148
       env_var: HOST
     port:
-      value: 6379
+      value: 30959
       env_var: PORT
     password:
-      value: null
+      value: Hzlh.com2020
       env_var: PASSWORD
     username:
       value: null
       env_var: USERNAME
     db:
-      value: 0
+      value: 20
       env_var: DB
   redis_stm_client:
     name: RedisConnector
@@ -62,10 +62,10 @@ components:
       value: ''
       env_var: BOT_ID
     start_time:
-      value: 2024-11-10_22:05:30
+      value: 2024-11-11_15:02:26
       env_var: START_TIME
     folder_name:
-      value: ./running_logs/2024-11-10_22:05:30
+      value: ./running_logs/2024-11-11_15:02:26
       env_var: FOLDER_NAME
   AppInput:
     name: AppInput
@@ -75,10 +75,10 @@ components:
       value: ''
       env_var: BOT_ID
     start_time:
-      value: 2024-11-10_22:05:30
+      value: 2024-11-11_15:02:26
       env_var: START_TIME
     folder_name:
-      value: ./running_logs/2024-11-10_22:05:30
+      value: ./running_logs/2024-11-11_15:02:26
       env_var: FOLDER_NAME
   RedisSTM:
     name: RedisSTM
