--- a/examples/step3_outfit_with_loop/configs/llms/text_res.yml
+++ b/examples/step3_outfit_with_loop/configs/llms/text_res.yml
@@ -1,6 +1,6 @@
 name: OpenaiGPTLLM
 model_id: gpt-4o
-api_key: ${env| custom_openai_key, openai_api_key}
-endpoint: ${env| custom_openai_endpoint, https://api.openai.com/v1}
+api_key: ${env| custom_openai_key, sk-2fpMc0GBGTGG96w62cF7B9621bA34aDa8b2112D26404Ae4e}
+endpoint: ${env| custom_openai_endpoint, http://36.133.246.107:11002/v1}
 temperature: 0
 vision: false
