--- a/examples/mm_rpg_game/configs/llms/gpt.yml
+++ b/examples/mm_rpg_game/configs/llms/gpt.yml
@@ -1,5 +1,5 @@
 name: OpenaiGPTLLM
-model_id: gpt-4o
+model_id: gpt-4o-mini
 api_key: ${env| custom_openai_key, sk-2fpMc0GBGTGG96w62cF7B9621bA34aDa8b2112D26404Ae4e}
 endpoint: ${env| custom_openai_endpoint, http://36.133.246.107:11002/v1}
 temperature: 0
