--- a/examples/VQA_with_mem0/container.yaml
+++ b/examples/VQA_with_mem0/container.yaml
@@ -17,7 +17,7 @@ conductor_config:
     description: The authorization token refresh interval in minutes.
     env_var: AUTH_TOKEN_TTL_MIN
   debug:
-    value: false
+    value: true
     description: Debug mode
     env_var: DEBUG
 connectors:
