--- a/examples/navigate_general/configs/workers/obstacle_detector.yaml
+++ b/examples/navigate_general/configs/workers/obstacle_detector.yaml
@@ -1,2 +1,3 @@
 name: ObstacleDetector
-llm: ${sub|fk77_dpo}  # Using the same LLM config as VQA example 
+# llm: ${sub|fk77_dpo}  # Using the same LLM config as VQA example 
+llm: ${sub|intern25_vl_1b_remote}
