--- a/examples/VQA_with_mem0/configs/workers/multimodal_query_generator.yaml
+++ b/examples/VQA_with_mem0/configs/workers/multimodal_query_generator.yaml
@@ -1,3 +1,4 @@
 name: MultimodalQueryGenerator
 # llm: ${sub|doubao_vision_lite}
-llm: ${sub|fk77_dpo}
+# llm: ${sub|fk77_dpo}
+llm: ${sub|intern25_vl_1b_remote}
